--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -31,6 +31,8 @@
       displayName: 'azure, portal, settings, evaluation, offline, policy, export, model, configure'
     - name: Verwenden des Ausbildungsmodus
       href: how-to-learning-behavior.md
+    - name: Verwenden mehrerer Slots
+      href: how-to-multi-slot.md
     - name: Verwalten von Modell- und Lerneinstellungen
       href: how-to-manage-model.md
     - name: Analysieren mit einer Offlinebewertung
@@ -67,6 +69,9 @@
         - name: Belohnungen
           href: concept-rewards.md
           displayName: 'reward, wait time, default reward'
+        - name: Personalisierung mit mehreren Slots
+          href: concept-multi-slot-personalization.md
+          displayName: 'multi-slot, multi slot, multi slot personalizer, multi-slot personalizer'
         - name: Vertiefendes Lernen
           href: concepts-reinforcement-learning.md
           displayName: 'RL, contextual bandits, Vowpal Wabbit'
@@ -77,6 +82,8 @@
       displayName: 'learning policy, Counterfactual, features'
     - name: Featureauswertung
       href: concept-feature-evaluation.md
+    - name: Automatische Optimierung
+      href: concept-auto-optimization.md
     - name: Skalierbarkeit und Leistung
       href: concepts-scalability-performance.md
 - name: Tutorials
