--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -63,14 +63,18 @@
           href: /security/benchmark/azure/baselines/logic-apps-security-baseline?toc=/azure/logic-apps/toc.json
 - name: Anleitungen
   items:
-    - name: Azure Logic Apps-Instanz mit nur einem Mandanten (Vorschau)
+    - name: Azure Logic Apps-Instanz mit nur einem Mandanten
       items:
-        - name: Übersicht über einzelne Mandanten (Vorschau)
+        - name: Übersicht über einzelne Mandanten
           href: single-tenant-overview-compare.md
         - name: 'Erstellen von Workflows mit nur einem Mandanten: Portal'
           href: create-single-tenant-workflows-azure-portal.md
         - name: 'Erstellen von Workflows mit nur einem Mandanten: Visual Studio Code'
           href: create-single-tenant-workflows-visual-studio-code.md
+        - name: Bearbeiten von Einstellungen für Hosts und Apps für Logik-Apps mit nur einem Mandanten
+          href: edit-app-settings-host-settings.md
+        - name: Erstellen von Parametern für Workflows mit nur einem Mandanten
+          href: parameterize-workflow-app.md
         - name: DevOps-Bereitstellung für einen einzelnen Mandanten
           href: devops-deployment-single-tenant-azure-logic-apps.md
         - name: Einrichten der DevOps-Bereitstellung für einen einzelnen Mandanten
@@ -79,6 +83,12 @@
           href: secure-single-tenant-workflow-virtual-network-private-endpoint.md
         - name: Schätzen der Speicherkosten für Workflows mit nur einem Mandanten
           href: estimate-storage-costs.md
+    - name: Azure Arc-fähige Logik-Apps
+      items:
+        - name: Informationen zu Azure Arc-fähigen Logik-Apps
+          href: azure-arc-enabled-logic-apps-overview.md
+        - name: Erstellen und Bereitstellen von Arc-fähigen Logik-Apps
+          href: azure-arc-enabled-logic-apps-create-deploy-workflows.md
     - name: Entwickeln
       items:
         - name: Erstellen auf der Grundlage von vorgefertigten Vorlagen
