--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -48,12 +48,18 @@ items:
           - name: Für Gesundheitsdaten
             href: /legal/cognitive-services/text-analytics/transparency-note-health?context=/azure/cognitive-services/text-analytics/context/context
             displayName: 'Transparency note for Text Analytics for Health, Text Analytics Transparency for Health, Responsible AI, Responsible use of AI, Text Analytics Health'
-          - name: Für personenbezogene Informationen
-            href: /legal/cognitive-services/text-analytics/transparency-note-personally-identifiable-information?context=/azure/cognitive-services/text-analytics/context/context
-            displayName: 'Transparency note for Text Analytics PII, Transparency note for Text Analytics Personally Identifiable Information, Text Analytics Transparency for PII, Responsible AI, Responsible use of AI, Text Analytics PII'
+          - name: 'Für die Erkennung benannter Entitäten (Named Entity Recognition, NER) und personenbezogener Informationen (Personally Identifying Information, PII)'
+            href: /legal/cognitive-services/text-analytics/transparency-note-named-entity-recognition?context=/azure/cognitive-services/text-analytics/context/context
+            displayName: 'Transparency note for Text Analytics NER, Transparency note for Text Analytics Named Entity Recognition, Text Analytics Transparency for NER, Responsible AI, Responsible use of AI, Text Analytics NER'
           - name: Für Stimmungsanalyse
             href: /legal/cognitive-services/text-analytics/transparency-note-sentiment-analysis?context=/azure/cognitive-services/text-analytics/context/context
             displayName: 'Transparency note for Text Analytics Sentiment Analysis, Text Analytics Transparency for Sentiment Analysis, Responsible AI, Responsible use of AI, Text Analytics Sentiment Analysis, Sentiment Analysis Transparency Note'
+          - name: Für die Schlüsselbegriffsanalyse
+            href: /legal/cognitive-services/text-analytics/transparency-note-key-phrase-extraction?context=/azure/cognitive-services/text-analytics/context/context
+            displayName: 'Transparency note for Text Analytics Key Phrase Analysis, Text Analytics Transparency for Key Phrase Analysis, Responsible AI, Responsible use of AI, Text Analytics Key Phrase Analysis, Key Phrase Analysis Transparency Note'
+          - name: Für die Sprachenerkennung
+            href: /legal/cognitive-services/text-analytics/transparency-note-language-detection?context=/azure/cognitive-services/text-analytics/context/context
+            displayName: 'Transparency note for Text Analytics Language Detection, Text Analytics Transparency for Language Detection, Responsible AI, Responsible use of AI, Text Analytics Language Detection, Language Detection Transparency Note'
       - name: Integration und verantwortungsvolle Verwendung
         href: /legal/cognitive-services/text-analytics/guidance-integration-responsible-use?context=/azure/cognitive-services/text-analytics/context/context
         displayName: 'Responsible deployment, Responsible use, Responsible integration, AI deployment, AI use'
